# CrossKEY

./: .gitattributes  .gitignore  README.md  example_test.py  example_train.py  example_training.py  make_gif.py  pyproject.toml  setup.sh
configs/: test_config.yaml  train_config.yaml
docs/superpowers/plans/: 2026-04-05-crosskey-cleanup.md
notebooks/: demo.ipynb
scripts/: create_heatmaps.py  precompute_demo.py  run_sift.py
space/: README.md  app.py  inference.py  requirements.txt  test_visualization.py  visualization.py
src/data/: __init__.py  datamodule.py  dataset.py  transforms.py
src/model/: __init__.py  descriptor.py  losses.py  matcher.py  networks.py
src/utils/: __init__.py  sift.py  utils.py
