[project]
name = "crosskey"
version = "0.1.0"
description = "A 3D Cross-modal Keypoint Descriptor for MR-US Matching and Registration"
authors = [
    {name = "D. Morozov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.1,<3.0.0",
    "torchvision>=0.22.1,<0.23.0",
    "torchaudio>=2.7.1,<3.0.0",
    "lightning>=2.5.2,<3.0.0",
    "pandas>=2.3.1,<3.0.0",
    "scikit-learn>=1.7.1,<2.0.0",
    "nibabel>=5.3.2,<6.0.0",
    "wandb>=0.21.3,<0.22.0",
    "tensorboard>=2.20.0,<3.0.0",
    "matplotlib>=3.10.6,<4.0.0",
    "tqdm>=4.66.0",
    "scipy>=1.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
